# cs106l-assignments

assignment0/: CMakeLists.txt
assignment1/: CMakeLists.txt  main.cpp  utils.cpp
assignment2/: CMakeLists.txt  main.cpp
assignment2/autograder/: utils.hpp
assignment2/autograder/student_output/: match.txt
assignment3/: CMakeLists.txt  class.h  sandbox.cpp
assignment4/: CMakeLists.txt  spellcheck.cpp
assignment5/: CMakeLists.txt  user.cpp  user.h
assignment6/: CMakeLists.txt  main.cpp
assignment7/: CMakeLists.txt  main.cpp  unique_ptr.h
